@@ -1,0 +1,94 @@
+<interface>
+   <name>Get NetApp Volumes</name>
+	<description>Queries a Netapp for a list of monitorable volumes</description>
+	<script_path>|path_cacti|/scripts/ss_netapp.php</script_path>
+	<script_function>ss_netapp_volumes</script_function>
+	<script_server>php</script_server>
+	<arg_index>index</arg_index>
+	<arg_query>query</arg_query>
+	<arg_get>get</arg_get>
+	<arg_prepend>|host_hostname| |host_snmp_version|:|host_snmp_port|:|host_snmp_timeout|:|host_snmp_community|:|host_snmp_username|:|host_snmp_password|:|host_snmp_auth_protocol|:|host_snmp_priv_passphrase|:|host_snmp_priv_protocol|:|host_snmp_context|</arg_prepend>
+	<output_delimeter>!</output_delimeter>
+	<index_order>dfMountedOn:dfIndex</index_order>
+	<index_order_type>alphabetic</index_order_type>
+	<index_title_format>|chosen_order_field|</index_title_format>
+
+   <fields>
+      <dfIndex>
+         <name>Index</name>
+         <direction>input</direction>
+         <query_name>index</query_name>
+      </dfIndex>
+      <dfMountedOn>
+         <name>Description</name>
+         <direction>input</direction>
+         <query_name>name</query_name>
+      </dfMountedOn>
+      <dfKBytesTotal>
+         <name>KBytesTotal</name>
+         <direction>output</direction>
+         <query_name>kbtotal</query_name>
+      </dfKBytesTotal>
+      <dfKBytesUsed>
+         <name>KBytesUsed</name>
+         <direction>output</direction>
+         <query_name>kbused</query_name>
+      </dfKBytesUsed>
+      <dfKBytesAvail>
+         <name>KBytesAvail</name>
+         <direction>output</direction>
+         <query_name>kbfree</query_name>
+      </dfKBytesAvail>
+	  <dfKBytesShared>
+	     <name>KBytesShared</name>
+         <direction>output</direction>
+         <query_name>kbshared</query_name>
+	  </dfKBytesShared>
+	  <dfKBytesSaved>
+	     <name>KBytesSaved</name>
+         <direction>output</direction>
+         <query_name>kbsaved</query_name>
+	  </dfKBytesSaved>
+      <dfPerCentKBytesCapacity>
+         <name>PerCentKBytesCapacity</name>
+         <direction>output</direction>
+         <query_name>usedper</query_name>
+      </dfPerCentKBytesCapacity>
+      <dfPerCentKBytesSaved>
+         <name>PerCentKBytesSaved</name>
+         <direction>output</direction>
+         <query_name>savedper</query_name>
+      </dfPerCentKBytesSaved>
+      <dfInodesUsed>
+         <name>InodesUsed</name>
+         <direction>output</direction>
+         <query_name>iused</query_name>
+      </dfInodesUsed>
+      <dfInodesFree>
+         <name>InodesFree</name>
+         <direction>output</direction>
+         <query_name>ifree</query_name>
+      </dfInodesFree>
+      <dfPerCentInodeCapacity>
+         <name>PerCentInodeCapacity</name>
+         <direction>output</direction>
+         <query_name>iusedper</query_name>
+      </dfPerCentInodeCapacity>
+      <dfMaxFilesAvail>
+         <name>MaxFilesAvail</name>
+         <direction>output</direction>
+         <query_name>ffree</query_name>
+      </dfMaxFilesAvail>
+      <dfMaxFilesUsed>
+         <name>MaxFilesUsed</name>
+         <direction>output</direction>
+         <query_name>fused</query_name>
+      </dfMaxFilesUsed>
+      <dfMaxFilesPossible>
+         <name>MaxFilesPossible</name>
+         <direction>output</direction>
+         <query_name>fposs</query_name>
+      </dfMaxFilesPossible>
+
+   </fields>
+</interface>
