@@ -3,6 +3,11 @@
 # $Header: $
 
   14 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
+  +cacti/netapp/script_server/netapp-volumes.xml:
+  Adding script_server/netapp-volumes.xml for use with ss_netapp.php and the
+  new ss_netapp_volumes function.
+
+  14 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
   cacti/netapp/scripts/ss_netapp.php:
   Renaming some of the oids array keys.
 
